# api/docs/swagger.yaml
@@ -1,75 +1,34 @@
 definitions:
-  handlers.GetTaskResponse:
-    properties:
-      completed_at:
-        type: integer
-      content:
-        type: string
-      course_id:
-        type: string
-      cover:
-        type: string
-      homework:
-        type: string
-      next:
-        type: string
-      section:
-        type: string
-      status:
-        type: string
-      task_id:
-        type: string
-      title:
-        type: string
-      type:
-        type: string
-    type: object
   handlers.LoginRequest:
     properties:
-      user:
-        $ref: '#/definitions/handlers.user'
+      initData:
+        type: string
     type: object
   handlers.SaveHomeworkRequest:
     properties:
       homework:
         type: string
     type: object
-  handlers.user:
-    properties:
-      auth_date:
-        type: string
-      first_name:
-        type: string
-      hash:
-        type: string
-      id:
-        type: string
-      last_name:
-        type: string
-      photo_url:
-        type: string
-      username:
-        type: string
-    type: object
   types.Task:
     properties:
-      completed_at:
+      completedAt:
         type: integer
       content:
         type: string
-      course_id:
+      courseID:
         type: string
       cover:
         type: string
       homework:
+        description: Поле с выполненной домашней работой стажера
+        type: string
+      id:
         type: string
       next:
         type: string
       section:
         type: string
       status:
-        type: string
-      task_id:
         type: string
       title:
         type: string
@@ -138,7 +97,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handlers.GetTaskResponse'
+            $ref: '#/definitions/types.Task'
         "400":
           description: Bad Request
           schema:
@@ -310,7 +269,7 @@ paths:
       tags:
       - users
   /api/users/refresh-tokens:
-    patch:
+    post:
       consumes:
       - application/json
       description: Обновить access и refresh токены
